@@ -1,3 +1,6 @@
+2006-02-09  Alex Roitman  <shura@gramps-project.org>
+	* src/WriteGedcom.py (write_sources): Export data_map.
+
 2006-02-09  Alexandre Prokoudine  <alexandre.prokoudine@gmail.com>
 	* src/data/gramps.desktop: Improve Russian string, add Office
 	category.
